bindings/rust/wasmedge-sys/docs/wasmedge.h

/// WasmEdge string struct.
typedef struct WasmEdge_String {
  uint32_t Length;
  const char *Buf;
} WasmEdge_String;
/// Opaque struct of WasmEdge store.
typedef struct WasmEdge_StoreContext WasmEdge_StoreContext;
/// Opaque struct of WasmEdge memory instance.
typedef struct WasmEdge_MemoryInstanceContext WasmEdge_MemoryInstanceContext;
/// Opaque struct of WasmEdge global instance.
typedef struct WasmEdge_GlobalInstanceContext WasmEdge_GlobalInstanceContext;
/// Deletion of the WasmEdge_String.
///
/// After calling this function, the resources in the WasmEdge_String object
/// will be released and the object should __NOT__ be used.
///
/// \param Str the WasmEdge_String object to delete.
WASMEDGE_CAPI_EXPORT extern void WasmEdge_StringDelete(WasmEdge_String Str);
/// Get the memory instance context by the memory name.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported memory instance context of the anonymous module by the memory
/// name. If you want to get the exported memory of registered named modules in
/// the store context, please call `WasmEdge_StoreFindMemoryRegistered` instead.
/// The result memory instance context links to the memory instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_MemoryInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param Name the memory name WasmEdge_String.
///
/// \returns pointer to the memory instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_MemoryInstanceContext *
WasmEdge_StoreFindMemory(WasmEdge_StoreContext *Cxt,
                         const WasmEdge_String Name);
/// Get the memory instance context by the memory name and the module name.
///
/// After registering a WASM module, you can call this function to get the
/// exported memory instance context by the module name and the memory name.
/// The result memory instance context links to the memory instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_MemoryInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param MemoryName the memory name WasmEdge_String.
///
/// \returns pointer to the memory instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_MemoryInstanceContext *
WasmEdge_StoreFindMemoryRegistered(WasmEdge_StoreContext *Cxt,
                                   const WasmEdge_String ModuleName,
                                   const WasmEdge_String MemoryName);
/// Get the global instance context by the instance address.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported global instance context of the anonymous module by the global
/// name. If you want to get the exported global of registered named modules in
/// the store context, please call `WasmEdge_StoreFindGlobalRegistered` instead.
/// The result global instance context links to the global instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_GlobalInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param Name the global name WasmEdge_String.
///
/// \returns pointer to the global instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_GlobalInstanceContext *
WasmEdge_StoreFindGlobal(WasmEdge_StoreContext *Cxt,
                         const WasmEdge_String Name);
/// Get the global instance context by the global name and the module name.
///
/// After registering a WASM module, you can call this function to get the
/// exported global instance context by the module name and the global name.
/// The result global instance context links to the global instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_GlobalInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param GlobalName the global name WasmEdge_String.
///
/// \returns pointer to the global instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_GlobalInstanceContext *
WasmEdge_StoreFindGlobalRegistered(WasmEdge_StoreContext *Cxt,
                                   const WasmEdge_String ModuleName,
                                   const WasmEdge_String GlobalName);
/// Get the length of exported function list in store.
///
/// If you want to get the function list of the registered named modules in the
/// store context, please call `WasmEdge_StoreListFunctionRegisteredLength`
/// instead.
///
/// \param Cxt the WasmEdge_StoreContext.
///
/// \returns length of the exported function list.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListFunctionLength(const WasmEdge_StoreContext *Cxt);
/// List the exported function names.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported function list of the anonymous module. If you want to get the
/// function list of the registered named modules in the store context, please
/// call `WasmEdge_StoreListFunctionRegistered` instead.
/// The returned function names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported
/// function list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param [out] Names the output WasmEdge_String buffer of the function names.
/// \param Len the buffer length.
///
/// \returns actual exported function list size.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListFunction(WasmEdge_StoreContext *Cxt, WasmEdge_String *Names,
                           const uint32_t Len);
/// Get the exported function list length of the registered module in store.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
///
/// \returns the exported function list length of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListFunctionRegisteredLength(const WasmEdge_StoreContext *Cxt,
                                           const WasmEdge_String ModuleName);
/// List the exported function names of the registered module.
///
/// After registering a WASM module, you can call this function to get the
/// exported function list of the registered module by the module name.
/// The returned function names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported
/// function list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param [out] Names the output WasmEdge_String buffer of the function names.
/// \param Len the buffer length.
///
/// \returns actual exported function list size of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t WasmEdge_StoreListFunctionRegistered(
    WasmEdge_StoreContext *Cxt, const WasmEdge_String ModuleName,
    WasmEdge_String *Names, const uint32_t Len);
/// Get the length of exported table list in store.
///
/// If you want to get the table list of the registered named modules in the
/// store context, please call `WasmEdge_StoreListTableRegisteredLength`
/// instead.
///
/// \param Cxt the WasmEdge_StoreContext.
///
/// \returns length of the exported table list.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListTableLength(const WasmEdge_StoreContext *Cxt);
/// List the exported table names.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported table list of the anonymous module. If you want to get the
/// table list of the registered named modules in the store context, please
/// call `WasmEdge_StoreListTableRegistered` instead.
/// The returned table names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported table
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param [out] Names the output WasmEdge_String buffer of the table names.
/// \param Len the buffer length.
///
/// \returns actual exported table list size.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListTable(WasmEdge_StoreContext *Cxt, WasmEdge_String *Names,
                        const uint32_t Len);
/// Get the exported table list length of the registered module in store.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
///
/// \returns the exported table list length of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListTableRegisteredLength(const WasmEdge_StoreContext *Cxt,
                                        const WasmEdge_String ModuleName);
/// List the exported table names of the registered module.
///
/// After registering a WASM module, you can call this function to get the
/// exported table list of the registered module by the module name.
/// The returned table names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported table
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param [out] Names the output WasmEdge_String buffer of the table names.
/// \param Len the buffer length.
///
/// \returns actual exported table list size of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListTableRegistered(WasmEdge_StoreContext *Cxt,
                                  const WasmEdge_String ModuleName,
                                  WasmEdge_String *Names, const uint32_t Len);
/// Get the length of exported memory list in store.
///
/// If you want to get the memory list of the registered named modules in the
/// store context, please call `WasmEdge_StoreListMemoryRegisteredLength`
/// instead.
///
/// \param Cxt the WasmEdge_StoreContext.
///
/// \returns length of the exported memory list.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListMemoryLength(const WasmEdge_StoreContext *Cxt);
/// Get the exported memory list length of the registered module in store.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
///
/// \returns the exported memory list length of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListMemoryRegisteredLength(const WasmEdge_StoreContext *Cxt,
                                         const WasmEdge_String ModuleName);
/// Deletion of the WasmEdge_MemoryInstanceContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_MemoryInstanceContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_MemoryInstanceDelete(WasmEdge_MemoryInstanceContext *Cxt);
/// Deletion of the WasmEdge_GlobalInstanceContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_GlobalInstanceContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_GlobalInstanceDelete(WasmEdge_GlobalInstanceContext *Cxt);