bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " Get the memory instance context by the memory name."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported memory instance context of the anonymous module by the memory"]
    #[doc = " name. If you want to get the exported memory of registered named modules in"]
    #[doc = " the store context, please call `WasmEdge_StoreFindMemoryRegistered` instead."]
    #[doc = " The result memory instance context links to the memory instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_MemoryInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param Name the memory name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the memory instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindMemory(
        Cxt: *mut WasmEdge_StoreContext,
        Name: WasmEdge_String,
    ) -> *mut WasmEdge_MemoryInstanceContext;
}
extern "C" {
    #[doc = " Get the memory instance context by the memory name and the module name."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported memory instance context by the module name and the memory name."]
    #[doc = " The result memory instance context links to the memory instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_MemoryInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param MemoryName the memory name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the memory instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindMemoryRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        MemoryName: WasmEdge_String,
    ) -> *mut WasmEdge_MemoryInstanceContext;
}
extern "C" {
    #[doc = " Get the global instance context by the instance address."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported global instance context of the anonymous module by the global"]
    #[doc = " name. If you want to get the exported global of registered named modules in"]
    #[doc = " the store context, please call `WasmEdge_StoreFindGlobalRegistered` instead."]
    #[doc = " The result global instance context links to the global instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_GlobalInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param Name the global name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the global instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindGlobal(
        Cxt: *mut WasmEdge_StoreContext,
        Name: WasmEdge_String,
    ) -> *mut WasmEdge_GlobalInstanceContext;
}
extern "C" {
    #[doc = " Get the global instance context by the global name and the module name."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported global instance context by the module name and the global name."]
    #[doc = " The result global instance context links to the global instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_GlobalInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param GlobalName the global name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the global instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindGlobalRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        GlobalName: WasmEdge_String,
    ) -> *mut WasmEdge_GlobalInstanceContext;
}
extern "C" {
    #[doc = " Get the length of exported function list in store."]
    #[doc = ""]
    #[doc = " If you want to get the function list of the registered named modules in the"]
    #[doc = " store context, please call `WasmEdge_StoreListFunctionRegisteredLength`"]
    #[doc = " instead."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " \\returns length of the exported function list."]
    pub fn WasmEdge_StoreListFunctionLength(Cxt: *const WasmEdge_StoreContext) -> u32;
}
extern "C" {
    #[doc = " List the exported function names."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported function list of the anonymous module. If you want to get the"]
    #[doc = " function list of the registered named modules in the store context, please"]
    #[doc = " call `WasmEdge_StoreListFunctionRegistered` instead."]
    #[doc = " The returned function names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported"]
    #[doc = " function list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the function names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported function list size."]
    pub fn WasmEdge_StoreListFunction(
        Cxt: *mut WasmEdge_StoreContext,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the exported function list length of the registered module in store."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns the exported function list length of the module."]
    pub fn WasmEdge_StoreListFunctionRegisteredLength(
        Cxt: *const WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
    ) -> u32;
}
extern "C" {
    #[doc = " List the exported function names of the registered module."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported function list of the registered module by the module name."]
    #[doc = " The returned function names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported"]
    #[doc = " function list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the function names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported function list size of the module."]
    pub fn WasmEdge_StoreListFunctionRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the length of exported table list in store."]
    #[doc = ""]
    #[doc = " If you want to get the table list of the registered named modules in the"]
    #[doc = " store context, please call `WasmEdge_StoreListTableRegisteredLength`"]
    #[doc = " instead."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " \\returns length of the exported table list."]
    pub fn WasmEdge_StoreListTableLength(Cxt: *const WasmEdge_StoreContext) -> u32;
}
extern "C" {
    #[doc = " List the exported table names."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported table list of the anonymous module. If you want to get the"]
    #[doc = " table list of the registered named modules in the store context, please"]
    #[doc = " call `WasmEdge_StoreListTableRegistered` instead."]
    #[doc = " The returned table names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported table"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the table names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported table list size."]
    pub fn WasmEdge_StoreListTable(
        Cxt: *mut WasmEdge_StoreContext,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the exported table list length of the registered module in store."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns the exported table list length of the module."]
    pub fn WasmEdge_StoreListTableRegisteredLength(
        Cxt: *const WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
    ) -> u32;
}
extern "C" {
    #[doc = " List the exported table names of the registered module."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported table list of the registered module by the module name."]
    #[doc = " The returned table names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported table"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the table names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported table list size of the module."]
    pub fn WasmEdge_StoreListTableRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the length of exported memory list in store."]
    #[doc = ""]
    #[doc = " If you want to get the memory list of the registered named modules in the"]
    #[doc = " store context, please call `WasmEdge_StoreListMemoryRegisteredLength`"]
    #[doc = " instead."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " \\returns length of the exported memory list."]
    pub fn WasmEdge_StoreListMemoryLength(Cxt: *const WasmEdge_StoreContext) -> u32;
}
